--- a/react-app/src/pages/home/home.module.css
+++ b/react-app/src/pages/home/home.module.css
@@ -116,7 +116,7 @@ button > .title {
 }
 
 .section-workspaces-list {
-    @apply mt-[calc(-var(--titlebar-height))];
+    @apply mt-[calc(var(--titlebar-height)*-1)];
     @apply grid gap-x-6 items-center h-full;
     @apply grid-cols-[repeat(5,fit-content(100%))];
     @apply grid-rows-1; /* for seleced tab indicator */
