--- a/react-app/src/components/FileCard/index.module.css
+++ b/react-app/src/components/FileCard/index.module.css
@@ -8,7 +8,7 @@
     @apply rounded-xl;
     @apply bg-white;
     @apply p-4 flex;
-    @apply border-neutral-200;
+    @apply shadow-sm;
 }
 
 .card.horizontal {
