--- a/react-app/src/components/FileCard/index.module.css
+++ b/react-app/src/components/FileCard/index.module.css
@@ -1,14 +1,22 @@
 .container {
     @apply p-1 rounded-2xl;
-    @apply bg-indigo-100;
+    @apply bg-indigo-100 dark:bg-indigo-900;
     @apply space-y-1;
 }
 
 .card {
     @apply rounded-xl;
-    @apply bg-white;
+    @apply bg-white dark:bg-neutral-800 dark:text-white;
     @apply p-4 flex;
-    @apply shadow-sm;
+}
+
+.card.shadow {
+    @apply shadow-sm dark:shadow-neutral-900;
+}
+
+.card.bordered {
+    @apply border border-neutral-200;
+    @apply dark:border-neutral-700;
 }
 
 .card.horizontal {
@@ -54,13 +62,16 @@
 
 .mention-card {
     @apply flex flex-row space-x-1 items-center;
-    @apply border-2 border-neutral-200/75;
+    @apply border-2 border-neutral-200/75 dark:border-neutral-700;
     @apply rounded-lg py-0.5 pl-2 pr-1;
     @apply text-sm text-indigo-500;
+    @apply dark:text-indigo-300;
 }
 
 .grade {
     @apply block;
     @apply py-2 mt-2;
     @apply text-indigo-500 text-lg;
+    @apply dark:text-indigo-300;
 }
+
