--- a/react-app/src/components/OTPInput/index.module.css
+++ b/react-app/src/components/OTPInput/index.module.css
@@ -5,7 +5,7 @@
 
 .input-field {
     @apply w-11 h-11;
-    @apply border-2 border-neutral-200;
+    @apply border-2 border-neutral-200 dark:border-neutral-800;
     @apply rounded;
 
     @apply transition duration-150;
@@ -18,12 +18,13 @@
 
 .input-field:not(.disabled) {
     @apply cursor-text;
-    @apply hover:border-indigo-500;
+    @apply hover:border-indigo-500 dark:hover:border-indigo-700;
     @apply focus:ring focus:border-indigo-400 focus:ring-indigo-200;
+    @apply dark:focus:border-indigo-600 dark:focus:ring-indigo-900;
 }
 
 .input-field:not([data-otp='']) {
-    @apply border-indigo-500;
+    @apply border-indigo-500 dark:border-indigo-700;
 }
 
 .input-field.disabled {
