--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -51,3 +51,13 @@ body {
   @apply no-drag;
 }
 
+html[data-mask-animation="true"]::view-transition-image-pair(root) {
+  isolation: auto;
+}
+
+html[data-mask-animation="true"]::view-transition-old(root),
+html[data-mask-animation="true"]::view-transition-new(root) {
+  animation: none;
+  mix-blend-mode: normal;
+  display: block;
+}
