--- a/react-app/src/pages/home/index.module.css
+++ b/react-app/src/pages/home/index.module.css
@@ -222,8 +222,9 @@ button > .title {
     @apply z-30;
     @apply fixed left-[50%] top-[50%];
     @apply max-h-[75vh] max-w-[75vw] translate-x-[-50%] translate-y-[-50%];
+    @apply border-2 border-neutral-400;
     @apply shadow-lg bg-white dark:bg-neutral-900;
-    @apply dark:shadow dark:border-2 dark:border-neutral-700;
+    @apply dark:shadow dark:border-neutral-700;
     @apply rounded-2xl overflow-hidden;
     @apply no-drag;
     animation: contentShow 150ms cubic-bezier(0.16, 1, 0.3, 1);
@@ -249,7 +250,7 @@ button > .title {
     @apply px-3;
 }
 
-.nav-icon {
+.nav-item > svg {
     @apply h-5 w-5;
 }
 
