ui: adapt macos traffic lights; add processing animation

--- a/react-app/src/components/Titlebar/index.css
+++ b/react-app/src/components/Titlebar/index.css
@@ -21,6 +21,10 @@
     @apply text-black;
 }
 
+[data-os="darwin"] .titlebar {
+    @apply hidden;
+}
+
 .titlebar > * + button {
     @apply ml-4;
 }
