--- a/react-app/src/pages/home/index.module.css
+++ b/react-app/src/pages/home/index.module.css
@@ -21,6 +21,10 @@ body {
     @apply drag;
 }
 
+[data-os="darwin"] .nav {
+    @apply pt-8;
+}
+
 .nav-list {
     @apply p-0;
     @apply space-y-2;
@@ -141,12 +145,15 @@ button > .title {
 }
 
 .user-avatar {
-    @apply relative top-[calc(var(--titlebar-height)/4)];
     @apply rounded-lg;
 
     @apply overflow-hidden;
     @apply cursor-pointer;
     @apply no-drag;
+}
+
+[data-os='win32'] .user-avatar {
+    @apply relative top-[calc(var(--titlebar-height)/4)];
 }
 
 .user-avatar > img {
@@ -325,7 +332,7 @@ button > .title {
     @apply px-5 py-3;
 }
 
-.toggle-group-item {
+.settings-item.color-scheme button{
     @apply w-9 h-9 p-2;
     @apply bg-neutral-100 dark:bg-neutral-800;
     @apply first:rounded-l-lg last:rounded-r-lg;
