--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -40,6 +40,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: subpixel-antialiased;
+  overflow: hidden;
 }
 
 #root {
